# django-notification-system

./: .gitignore  LICENSE  README.md  README.rst  coolpeople.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: blank.yml  pr_tests.yml  python-publish.yml
django-notification-system/: __init__.py  admin.py
django-notification-system/migrations/: 0001_initial.py  0002_auto_20181105_0902.py  0003_auto_20190306_1006.py  0004_auto_20190412_1200.py  0005_auto_20190418_1132.py  0006_auto_20190514_1419.py  0007_auto_20190515_0848.py  0008_auto_20190710_1616.py  0009_auto_20190819_0933.py  0010_auto_20190911_1345.py  0011_optout_has_opted_out.py  0012_auto_20191115_1331.py  0013_usertarget_active.py  0014_auto_20200131_1551.py  0015_auto_20200203_1040.py  0016_auto_20200206_1356.py
django-notification-system/models/: __init__.py  notification.py  opt_out.py  target.py  user_target.py
django-notification-system/utils/: notification_handlers.py  opt_out_link.py
django_notification_system/: __init__.py  admin.py  apps.py  exceptions.py  urls.py
django_notification_system/migrations/: 0001_initial.py  0002_auto_20201130_2015.py  0002_auto_20201201_1720.py  0003_auto_20201130_2030.py
django_notification_system/models/: __init__.py  abstract.py  notification.py  opt_out.py  target.py  target_user_record.py  user_in_target.py  user_target.py
django_notification_system/notification_creators/: email.py  expo.py  twilio.py
django_notification_system/notification_handlers/: email.py  expo.py  twilio.py
django_notification_system/tests/: mock_exponent_server_sdk.py
django_notification_system/utils/: __init__.py  admin_site_utils.py  notification_handlers.py  notifications_creators.py  opt_out_link.py  sender.py
django_notification_system/views/: notification_blast.py  opt_out.py
docs/: conf.py  extending.rst  index.rst  installation.rst  introduction.rst  management_commands.rst  models.rst  utility_functions.rst
docs/_static/css/: custom.css
test_project/: settings.py  urls.py
test_project/notification_handlers/: expo.py
(+22 files in other folders)
