[metadata]
name = django-notification-system
version = 1.3
description = A Django app that allows developers to send notifications of various types to users.
description-file = README.md
long_description_content_type = text/markdown
url = https://github.com/crcresearch/django-notification-system
author = Justin Branco, Mike Dunn
author_email = jbranco@nd.edu 
license = MIT  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: